@@ -1,5 +1,6 @@
 config BR2_PACKAGE_HOSTAPD
 	bool "hostapd"
+	select BR2_PACKAGE_LIBNL
 	help
 	  User space daemon for wireless access points.
 
